changed limit for rss feed, temp display:none bugsquash

--- a/_sass/_defaults.scss
+++ b/_sass/_defaults.scss
@@ -146,3 +146,7 @@ footer[role="contentinfo"] {
     }
 }
 
+/* Temporary bugfix on post lists */
+div.rssMedia {
+  display: none;
+}
